tests/paczka1/fuzzy1/95572477.err
Error in line 7: DXHEG S818 67,9
Error in line 8: DXHEG S3 50,1
Error in line 18: S7 S3 10,7
Error in line 23: S7 S3 49,6
Error in line 20: c3vm3 A479 93,1
Error in line 30: S7 S818 96,8
Error in line 29: gOzf S818 94,9
Error in line 36: gOzf S3 61,1
